- Added option to save maapi session (received tcp stream) - Added more captured session files for replay

--- a/tests/nso/Makefile
+++ b/tests/nso/Makefile
@@ -7,9 +7,10 @@ else
 	BUILD_PATH=$(PROJECT_DIR)/out/rel
 endif
 ARGS?=maapi-schema
+NCS_D?=ncs
 
 start:
-	ncs --cd $(SELF_DIR)ncs
+	ncs --cd $(SELF_DIR)$(NCS_D)
 	ncs --wait-started 600
 
 stop:
