Set up a namespace when stading up the m3db test environment.

--- a/tests/m3db/Makefile
+++ b/tests/m3db/Makefile
@@ -10,7 +10,11 @@ endif
 NCS_D?=ncs
 
 start:
-	DOCKER_USER=$(DOCKER_USER) docker compose up
+	DOCKER_USER=$(DOCKER_USER) docker compose up -d
+	sleep 10
+	curl -X POST http://localhost:7201/api/v1/database/create -d '{ "type": "local", "namespaceName": "default", "retentionTime": "12h" }' | jq .
+	sleep 10
+	curl -X POST http://localhost:7201/api/v1/services/m3db/namespace/ready -d '{ "name": "default" }' | jq .
 
 stop:
 	docker compose down
