--- a/tests/m3db/docker-compose.yml
+++ b/tests/m3db/docker-compose.yml
@@ -18,6 +18,14 @@ services:
             - m3db
         ports:
             - 3000:3000
+        environment:
+            GF_AUTH_ANONYMOUS_ENABLED: "true"
+            GF_AUTH_ANONYMOUS_ORG_NAME: "NSO"
+            GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
+            #GF_AUTH_DISABLE_LOGIN_FORM: "true"
+            #GF_AUTH_DISABLE_SIGNOUT_MENU: "true"
+            GF_DASHBOARDS_JSON_ENABLED: "true"
+
         volumes:
             - type: bind
               source: ./grafana_data
