Default value for build path in compose file.

--- a/tests/tsdb-vmx/docker-compose.yml
+++ b/tests/tsdb-vmx/docker-compose.yml
@@ -37,7 +37,7 @@ services:
         build:
             dockerfile: ./nso.Dockerfile
         volumes:
-          - ${BUILD_PATH}:/mnt
+          - ${BUILD_PATH:-../../out/rel}:/mnt
         ports:
           - 4569:4569
 
