Build before bringing up tsdb test
Argh, there's no implied update if Dockerfile or whatnot is updated so
we just start with an older image. Now always doing a build, which is
very fast if everything is already up to date.

--- a/tests/tsdb-vmx/Makefile
+++ b/tests/tsdb-vmx/Makefile
@@ -10,6 +10,7 @@ endif
 NCS_D?=ncs
 
 start:
+	BUILD_PATH=$(BUILD_PATH) docker compose build
 	BUILD_PATH=$(BUILD_PATH) docker compose up -d
 	sleep 5
 	BUILD_PATH=$(BUILD_PATH) make init-m3db
