Use single worker thread to avoid potential bug?
I got some segfault, think it was libuv something something, so
presumably our TCP sockets. Not sure why and I don't want to debug that
right now so forcing a single worker thread for now to work around the
issue.

--- a/tests/tsdb-vmx/Makefile
+++ b/tests/tsdb-vmx/Makefile
@@ -68,7 +68,7 @@ stop:
 	BUILD_PATH=$(BUILD_PATH) docker compose down -v
 
 test:
-	BUILD_PATH=$(BUILD_PATH) docker compose exec nso /mnt/bin/acton_streamer.test tsdb-writer
+	BUILD_PATH=$(BUILD_PATH) docker compose exec nso /mnt/bin/acton_streamer.test tsdb-writer --rts-wthreads=1
 
 test-debug:
 	nsenter --net=/proc/$(shell docker inspect -f '{{.State.Pid}}' "$(shell docker compose ps -q nso)")/ns/netgdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args $(BUILD_PATH)/bin/acton_streamer.test tsdb-writer
