Add rebuild target
This'll rebuild the streamer app itself and the NSO stuff + restart the
NSO instance. The sleep at the end gives NSO time to start so we can do:

  make rebuild test

--- a/tests/tsdb-vmx/Makefile
+++ b/tests/tsdb-vmx/Makefile
@@ -74,3 +74,14 @@ test-debug:
 	nsenter --net=/proc/$(shell docker inspect -f '{{.State.Pid}}' "$(shell docker compose ps -q nso)")/ns/netgdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args $(BUILD_PATH)/bin/acton_streamer.test tsdb-writer
 
 .PHONY: start stop test test-debug cli
+
+
+rebuild-app:
+	$(MAKE) -C ../..
+
+rebuild-nso:
+	$(MAKE) -C ../../streaming-nso build tag-release
+	BUILD_PATH=$(BUILD_PATH) docker compose up -d nso
+	sleep 5
+
+rebuild: rebuild-app rebuild-nso
