Fix so we can rerun test after make clean
Doing a make clean removes the out/ directory, so rebuilding from
scratch means getting a new out directory (different inode bla bla).
With the out directory mounted in the container, we can't keep the
container running while rebuilding from scratch and then run the test
since it tries to access a directory that no longer exists.

I fixed by rewiring the variables a bit. I think it also looks simpler
now, fewer places where we need to pass this variable around.

--- a/tests/tsdb-vmx/Makefile
+++ b/tests/tsdb-vmx/Makefile
@@ -3,18 +3,18 @@ SELF_DIR:=$(dir $(lastword $(MAKEFILE_LIST)))
 PROJECT_DIR:=$(realpath $(SELF_DIR)/../..)
 #DOCKER_USER:=$(shell id -u):$(shell id -g)
 ifeq ($(DEV),true)
-	BUILD_PATH=$(PROJECT_DIR)/out/dev
+	BIN_PATH=/mnt/out/dev/bin
 else
-	BUILD_PATH=$(PROJECT_DIR)/out/rel
+	BIN_PATH=/mnt/out/rel/bin
 endif
 NCS_D?=ncs
 
 start:
-	BUILD_PATH=$(BUILD_PATH) docker compose build
-	BUILD_PATH=$(BUILD_PATH) docker compose up -d
+	docker compose build
+	docker compose up -d
 	sleep 5
-	BUILD_PATH=$(BUILD_PATH) make init-m3db
-	BUILD_PATH=$(BUILD_PATH) make init-grafana
+	make init-m3db
+	make init-grafana
 
 init-m3db:
 	curl -X POST http://localhost:7201/api/v1/database/create -d '{ "type": "local", "namespaceName": "default", "retentionTime": "12h" }' | jq .
@@ -65,13 +65,13 @@ add-vmx:
 
 
 stop:
-	BUILD_PATH=$(BUILD_PATH) docker compose down -v
+	docker compose down -v
 
 test:
-	BUILD_PATH=$(BUILD_PATH) docker compose exec nso /mnt/bin/acton_streamer.test tsdb-writer --rts-wthreads=1
+	docker compose exec nso $(BIN_PATH)/acton_streamer.test tsdb-writer --rts-wthreads=1
 
 test-debug:
-	nsenter --net=/proc/$(shell docker inspect -f '{{.State.Pid}}' "$(shell docker compose ps -q nso)")/ns/netgdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args $(BUILD_PATH)/bin/acton_streamer.test tsdb-writer
+	nsenter --net=/proc/$(shell docker inspect -f '{{.State.Pid}}' "$(shell docker compose ps -q nso)")/ns/netgdb -ex 'handle SIGPWR SIGXCPU nostop noprint' --args $(BIN_PATH)/acton_streamer.test tsdb-writer
 
 .PHONY: start stop test test-debug cli
 
@@ -81,7 +81,7 @@ rebuild-app:
 
 rebuild-nso:
 	$(MAKE) -C ../../streaming-nso build tag-release
-	BUILD_PATH=$(BUILD_PATH) docker compose up -d nso
+	docker compose up -d nso
 	sleep 5
 
 rebuild: rebuild-app rebuild-nso
