Telemetrify NSO package

--- a/streaming-nso/Makefile
+++ b/streaming-nso/Makefile
@@ -8,3 +8,16 @@ DEFAULT_TESTENV?=quick
 # standard make targets
 include nidned.mk
 
+ifeq ($(DEV),true)
+	OUTPUT=out/dev
+else
+	OUTPUT=out/rel
+endif
+
+Dockerfile: prepare-telemetrify-packages
+
+prepare-telemetrify-packages:
+	$(MAKE) -C .. build-packages
+	rsync -rupE ../packages/telemetrify packages
+
+.PHONY: copy-telemetrify-packages
