Use NID/package skeleton

--- a/telemetrify-nso/Dockerfile.in
+++ b/telemetrify-nso/Dockerfile.in
@@ -60,11 +60,6 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 # Each package may implement the strip target to clean up extra files generated
 # by ncsc, pylint and mypy. For example, ncsc-out, .mypy_cache, .pylint.d.
 RUN for PKG_SRC in $(find /src/packages /src/test-packages -mindepth 1 -maxdepth 1 -type d | xargs --no-run-if-empty -n1 basename | awk '{ print "/var/opt/ncs/packages/"$1 }'); do \
-# The includeed cisco-ios-cli package is already built, no need to build it as
-# part of the telemetrify-nso build
-  case ${PKG_SRC} in \
-    */cisco-ios-cli*) continue;; \
-  esac; \
   if [ -f "${PKG_SRC}/pyvenv-dev/bin/activate" ]; then . ${PKG_SRC}/pyvenv-dev/bin/activate; \
   elif [ -f "${PKG_SRC}/pyvenv/bin/activate" ]; then . ${PKG_SRC}/pyvenv/bin/activate; \
   fi; \
@@ -81,29 +76,15 @@ RUN for PKG_SRC in $(find /src/packages /src/test-packages -mindepth 1 -maxdepth
     make -C ${PKG_SRC}/src strip || exit 1; \
   fi; \
   make -f /src/nid/bmd.mk -C ${PKG_SRC} build-meta-data.xml; \
-  if [ -d ${PKG}/netsim ]; then make -C ${PKG}/netsim || exit 1; fi; \
   done
 
 RUN for PKG_LINK in $(find /src/packages /src/test-packages -mindepth 1 -maxdepth 1 -type l); do \
   rm ${PKG_LINK}; \
   done
 
-# build a netsim docker image by copying the compiled NED and changing the
-# default CMD to one that runs netsim, thus running this docker image will per
-# default startup a netsim instance
-FROM ${NSO_IMAGE_PATH}cisco-nso-dev:${NSO_VERSION} AS netsim
-
-ARG NED_DIR
-
-COPY --from=build /src/packages/${NED_DIR} /var/opt/ncs/packages/${NED_DIR}
-COPY /run-netsim.sh /run-netsim.sh
-
-VOLUME ["/netsim"]
-
-ENTRYPOINT []
-CMD ["/run-netsim.sh"]
-
-
+# produce an NSO image that comes loaded with our package - perfect for our
+# testing, but probably not anything beyond that since you typically want more
+# NSO packages for a production environment
 FROM ${NSO_IMAGE_PATH}cisco-nso-base:${NSO_VERSION} AS nso-configurator
 
 RUN apt update && apt install -y gdb sshpass
@@ -135,10 +116,8 @@ FROM nso-configurator AS nso
 # Remove NEDs used for configuration, only keeping the lightweight oper-data models
 RUN rm -rf /var/opt/ncs/packages/cisco-ios-cli*
 
-# build a minimal image that only contains the NED itself - perfect way to
-# distribute the compiled NED by relying on Docker package registry
+# build a minimal image that only contains the package itself - perfect way to
+# distribute the compiled package by relying on Docker package registry
 # infrastructure
 FROM scratch AS package
-ARG NED_DIR
-
-COPY --from=build /src/packages/${NED_DIR} /var/opt/ncs/packages/${NED_DIR}
+COPY --from=build /src/packages/ /var/opt/ncs/packages/
