--- a/telemetrify-nso/testenvs/quick/Makefile
+++ b/telemetrify-nso/testenvs/quick/Makefile
@@ -15,33 +15,11 @@ IPV6?=true
 start:
 	docker network inspect $(CNT_PREFIX) >/dev/null 2>&1 || docker network create $(CNT_PREFIX) $(shell [ "$(IPV6)" = "true" ] && export LC_ALL=C && echo --ipv6 --subnet $${IPV6_NET:-fd00:$$(< /dev/urandom tr -dc a-f0-9 | head -c4):$$(< /dev/urandom tr -dc a-f0-9 | head -c4):$$(< /dev/urandom tr -dc a-f0-9 | head -c4):}:/64)
 	docker run -td --name $(CNT_PREFIX)-nso --network-alias nso $(DOCKER_NSO_ARGS) $(IMAGE_BASENAME)/testnso:$(DOCKER_TAG)
-	docker run -td --name $(CNT_PREFIX)-netsim --network-alias dev1 --hostname dev1 $(DOCKER_ARGS) $(IMAGE_BASENAME)/netsim:$(DOCKER_TAG)
+# You may start other containers that are part of the testenv here. For example
+# a netsim container or a virtual router.
 	-[ "$(IPV6)" = "true" ] && echo $$(docker network inspect --format '{{range .IPAM.Config}}{{- if (gt (split .Subnet ":"|len) 1) -}}{{.Subnet}}{{- end}}{{end}}' $(CNT_PREFIX)) | egrep "^[23]...:" || (echo "Removing IPv6 default route" && docker ps -aq --filter label=com.cisco.nso.testenv.name=$(CNT_PREFIX) | $(XARGS) -I CNT -n1 docker run --rm --net=container:CNT --cap-add=NET_ADMIN $(NSO_IMAGE_PATH)cisco-nso-base:$(NSO_VERSION) ip -6 route del default >/dev/null 2>&1 || true)
 
 	$(MAKE) wait-started-nso
-# The following is an example (but a working example) of how to add the netsim
-# device started per default in the NED skeleton to NSO. Feel free to use it,
-# remove or modify as you see fit for your environment.
-	$(MAKE) add-device
-
-
-ifeq ($(NSO_VERSION_MAJOR),4)
-STRIP_NED:=--delete "//x:ned-id"
-endif
-
-add-device:
-	@echo "-- Add device to NSO"
-	@echo "   Get the package-meta-data.xml file from the compiled NED (we grab it from the netsim build)"
-# The netsim container only has a single version (ned-d) in the packages directory
-	docker exec $(CNT_PREFIX)-netsim bash -c "cp /var/opt/ncs/packages/*/package-meta-data.xml /tmp"
-	mkdir -p tmp
-	docker cp $(CNT_PREFIX)-netsim:/tmp/package-meta-data.xml tmp/package-meta-data.xml
-	@echo "   Fill in the device-type in add-device.xml by extracting the relevant part from the package-meta-data of the NED"
-	xmlstarlet sel -t -c "//*[_:ned-id] | //_:ned/_:netconf | //_:ned/_:cli | //_:ned/_:snmp | //_:ned/_:generic" tmp/package-meta-data.xml | xmlstarlet edit --subnode '_:*[not(_:ned-id)]' --type elem -n ned-id -v dummy | xmlstarlet sel -R -t -c '/' -c "document('test/add-device.xml')" | xmlstarlet edit -O -N x=http://tail-f.com/ns/ncs-packages -N y=http://tail-f.com/ns/ncs -d "/x:xsl-select/*[x:ned-id]/*[not(self::x:ned-id)]" -m "/x:xsl-select/*[x:ned-id]" "/x:xsl-select/y:devices/y:device/y:device-type" $(STRIP_NED) | tail -n +2 | sed '$$d' | cut -c 3- > tmp/add-device.xml
-	docker cp tmp/add-device.xml $(CNT_PREFIX)-nso:/add-device.xml
-	$(MAKE) runcmdJ CMD="configure\nload merge /add-device.xml\ncommit\nexit"
-	$(MAKE) runcmdJ CMD="show devices brief"
-	$(MAKE) runcmdJ CMD="request devices device dev1 ssh fetch-host-keys"
 
 # Place your tests in test. Feel free to define a target per test case
 # and call them from test in case you have more than a handful of cases.
@@ -62,40 +40,3 @@ test:
 # We can test for certain output by combining show commands in the CLI with for
 # example grep:
 #	$(MAKE) runcmdJ CMD="show configuration foo" | grep bar
-
-# Included below is an example test that covers the basics for a working NED and
-# netsim. The standard start target, defined in nidned.mk, will set up
-# the test environment by starting:
-# - a netsim container based on the NED YANG models
-# - an NSO container with the NED loaded
-#
-# Already by starting up we have verified that the YANG models of the netsim /
-# NED pass load time verification. For example, this could fail if there are
-# constraints in the YANG model that require certain data to be present (and
-# it's not when we start up as CDB is empty).
-#
-# As part of the testenv startup, in start-extra, we:
-# - add the netsim container as a device to the test NSO
-# - fetch SSH host-keys
-# - run sync-from
-#
-# This test then consists of:
-# - configuring the hostname on the netsim device to the magic string foobarhostname
-#   - we then grep for this magic string
-#   - ensuring we can send config and commit on the netsim device
-# - doing sync-from again
-#   - we check that the hostname is as expected
-#
-# TODO: to complete the test from the NED skeleton, you have to provide the
-# configuration to set the hostname on the device in the file
-# test/device-config-hostname.xml
-#
-
-	$(MAKE) runcmdJ CMD="request devices device dev1 sync-from"
-
-	@echo "Configure hostname on device through NSO"
-	docker cp test/device-config-hostname.xml $(CNT_PREFIX)-nso:/device-config-hostname.xml
-	$(MAKE) runcmdJ CMD="configure\nload merge /device-config-hostname.xml\ncommit\nexit"
-	$(MAKE) runcmdJ CMD="show configuration devices device dev1 config" | grep foobarhostname
-	$(MAKE) runcmdJ CMD="request devices device dev1 sync-from"
-	$(MAKE) runcmdJ CMD="show configuration devices device dev1 config" | grep foobarhostname
