--- a/telemetrify-nso/Dockerfile.in
+++ b/telemetrify-nso/Dockerfile.in
@@ -2,6 +2,7 @@ ARG NSO_IMAGE_PATH
 ARG NSO_VERSION
 
 FROM gitlab.dev.terastrm.net:4567/abs/dt-sdwan/nso:${NSO_VERSION} AS dt-sdwan
+FROM gitlab.dev.terastrm.net:4567/abs/dt-mplsnet/nso:${NSO_VERSION} AS dt-mplsnet
 # DEP_START
 # DEP_END
 
@@ -11,9 +12,6 @@ ARG PKG_FILE
 
 # We just need a few packages and in particular the YANG models from these sources
 COPY --from=dt-sdwan /var/opt/ncs/packages/ietf-network-topology/ /includes/ietf-network-topology/
-COPY --from=dt-sdwan /var/opt/ncs/packages/ietf-l3vpn-svc/ /includes/ietf-l3vpn-svc/
-# Remove XML templates since they fail to load without their deps packages / models
-RUN rm /includes/ietf-l3vpn-svc/templates/*.xml
 
 # DEP_INC_START
 # DEP_INC_END
@@ -66,6 +64,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 # Each package may implement the strip target to clean up extra files generated
 # by ncsc, pylint and mypy. For example, ncsc-out, .mypy_cache, .pylint.d.
 RUN for PKG_SRC in $(find /src/packages /src/test-packages -mindepth 1 -maxdepth 1 -type d | xargs --no-run-if-empty -n1 basename | awk '{ print "/var/opt/ncs/packages/"$1 }'); do \
+  find ${PKG_SRC}; \
   if [ -f "${PKG_SRC}/pyvenv-dev/bin/activate" ]; then . ${PKG_SRC}/pyvenv-dev/bin/activate; \
   elif [ -f "${PKG_SRC}/pyvenv/bin/activate" ]; then . ${PKG_SRC}/pyvenv/bin/activate; \
   fi; \
