--- a/telemetrify-nso/.gitlab-ci.yml
+++ b/telemetrify-nso/.gitlab-ci.yml
@@ -52,7 +52,7 @@ before_script:
   - *helper_mark_section
   - mark_section_start initialize Initializing
   - which curl docker expect gpg2 sshpass xmlstarlet >/dev/null || (echo "Installing prerequisites..." && apt-get -y update && DEBIAN_FRONTEND=noninteractive apt-get install -qy apt-transport-https ca-certificates curl expect gnupg2 software-properties-common sshpass xmlstarlet; which docker || (echo "Installing docker..." && curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && apt-key fingerprint 0EBFCD88 && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && apt-get -y update && apt-get -qy install -qy docker-ce docker-ce-cli containerd.io))
-  - which actonc >/dev/null || (echo "Installing acton..." && curl -fsSL -O https://github.com/actonlang/acton/releases/download/tip/acton_tip_amd64.deb && apt-get install -qy ./acton_tip_amd64.deb && rm acton_tip_amd64.deb)
+  - which actonc >/dev/null || (echo "Installing acton..." && curl -sS https://apt.acton-lang.io/acton.gpg | apt-key add - && echo "deb [arch=amd64] http://apt.acton-lang.io/ stable main" | tee /etc/apt/sources.list.d/acton.list && apt-get update && apt-get install -qy acton)
   - mark_section_end initialize
 
 
